WIP - adding some slides

--- a/index.html
+++ b/index.html
@@ -49,6 +49,88 @@
                     </script>
                 </section>
 
+                <section data-markdown>
+                    <script type="text/template">
+                    > Production of large software has become a scare item for
+                    > management. By reputation it is often an unprofitable morass, costly and
+                    > unending.
+
+                    > The good systems that are presently working were written by small groups.
+                    > More than twenty programmers working on a project is usually disastrous.
+
+                    Note:
+                    Another:
+                    > There is a widening gap between ambitions and achievements in software
+                    > engineering … the gap is arising at a time when the consequences of software
+                    > failure in all its aspects are becoming increasingly serious
+                    </script>
+                </section>
+
+                <section>
+                    <p style="font-size: 5em">λ?</p>
+                </section>
+
+                <section data-markdown data-background-color="#ffffff">
+                    <script type="text/template">
+                    ![Simplex vs complex](images/complect.png)
+                    </script>
+                </section>
+
+                <section data-markdown data-background-color="#ffffff">
+                    <script type="text/template">
+                    ![I have no idea what I'm doing](images/i-have-no-idea-dog-computer.jpg)
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    ## Single responsibility principle
+
+                    > A <del>class</del> function should have only one reason to change.
+
+                    Small, focussed functions are good too!
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    ## Open/closed principle
+
+                    > Software entities should be open for extension, but closed for modification
+
+                    Composition to the rescue!
+
+                    `( f ∘ g )( x ) = f ( g( x ) )`
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    ## Liskov substitution principle
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    ## Interface segregation principle
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    ## Dependency inversion principle
+                    </script>
+                </section>
+
+                <section data-background-color="#ffffff">
+                    <img class="stretch" data-src="images/functional-languages.png"></img>
+                </section>
+
+                <section data-background-color="#ffffff">
+                    <img class="stretch" data-src="images/haskell-logo.png"></img>
+                </section>
+
+
             </div>
 
         </div>
