Taking advantage of Dire Straits advice from @smorris-TW

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     identity :: t -> t
                     ```
 
-                    a.k.a. [Money for Nothing and Theorems for Free](https://bartoszmilewski.com/2014/09/22/parametricity-money-for-nothing-and-theorems-for-free/)
+                    a.k.a. [Money for nothing and your theorems for free](https://bartoszmilewski.com/2014/09/22/parametricity-money-for-nothing-and-theorems-for-free/)
                     </script>
                 </section>
 
