Adding missing slides to bring count to 20 + sources for images

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <section data-markdown data-background-color="#ffffff">
                     <script type="text/template">
                     ![Simplex vs complex](images/complect.png)
+                    <p>
+                    <small><a href="https://www.infoq.com/presentations/Simple-Made-Easy">(source)</a></small>
+                    </p>
                     </script>
                 </section>
 
@@ -181,6 +184,23 @@
                 <section data-markdown>
                     <script type="text/template">
                     </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    </script>
+                </section>
+
+                <section data-markdown>
+                    <script type="text/template">
+                    </script>
+                </section>
+
+                <section data-background-color="#ffffff">
+                    <img class="stretch" data-src="images/silver-bullet.png"></img>
+                    <p>
+                    <small><a href="https://www.projectsmart.co.uk/project-methodologies-not-a-silver-bullet.php">(source)</a></small>
+                    </p>
                 </section>
 
             </div>
