Some changes after a dry run

--- a/index.html
+++ b/index.html
@@ -51,18 +51,17 @@
 
                 <section data-markdown>
                     <script type="text/template">
+                    > There is a widening gap between ambitions and achievements in software
+                    > engineering … the gap is arising at a time when the consequences of software
+                    > failure in all its aspects are becoming increasingly serious
+
+                    Note:
                     > Production of large software has become a scare item for
                     > management. By reputation it is often an unprofitable morass, costly and
                     > unending.
 
                     > The good systems that are presently working were written by small groups.
                     > More than twenty programmers working on a project is usually disastrous.
-
-                    Note:
-                    Another:
-                    > There is a widening gap between ambitions and achievements in software
-                    > engineering … the gap is arising at a time when the consequences of software
-                    > failure in all its aspects are becoming increasingly serious
                     </script>
                 </section>
 
@@ -74,7 +73,7 @@
                     <script type="text/template">
                     ![Simplex vs complex](images/complect.png)
                     <p>
-                    <small><a href="https://www.infoq.com/presentations/Simple-Made-Easy">(source)</a></small>
+                    <small><small><a href="https://www.infoq.com/presentations/Simple-Made-Easy">(source)</a></small></small>
                     </p>
                     </script>
                 </section>
@@ -244,7 +243,7 @@ nonEmptyStrings = strings.stream()
                 <section data-background-color="#ffffff">
                     <img class="stretch" data-src="images/silver-bullet.png"></img>
                     <p>
-                    <small><a href="https://www.projectsmart.co.uk/project-methodologies-not-a-silver-bullet.php">(source)</a></small>
+                    <small><small><a href="https://www.projectsmart.co.uk/project-methodologies-not-a-silver-bullet.php">(source)</a></small></small>
                     </p>
                 </section>
 
