Adding blank finishing slide

--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ nonEmptyStrings = strings.stream()
                     </p>
                 </section>
 
+                <section data-background-color="#ffffff">
+                </section>
             </div>
 
         </div>
