Adding some notes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
                     > failure in all its aspects are becoming increasingly serious
 
                     Note:
+                    From 1968!
+
+                    This is at a time when there was much less software, and no such this as the
+                    cloud or IoT.
+
+                    Other quotes:
+
                     > Production of large software has become a scare item for
                     > management. By reputation it is often an unprofitable morass, costly and
                     > unending.
@@ -67,6 +74,16 @@
 
                 <section>
                     <p style="font-size: 5em">λ?</p>
+                    <aside class="notes">
+                        So, what is functional programming?
+                        <br/>
+                        <br/>
+                        Programming with functions! (inputs -> outputs, no side effects)
+                        <br/>
+                        <br/>
+                        Can it solve our problems? OO has improved things but
+                        we still have some of the same issues as 50 years ago
+                    </aside>
                 </section>
 
                 <section data-markdown data-background-color="#ffffff">
@@ -75,6 +92,11 @@
                     <p>
                     <small><small><a href="https://www.infoq.com/presentations/Simple-Made-Easy">(source)</a></small></small>
                     </p>
+                    Note:
+
+                    - Simple made easy
+                    - Simple is absolute
+                    - Difficulty is relative
                     </script>
                 </section>
 
