Adding some notes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     #### (a.k.a. intro to functional programming)
 
                     <small>by [Matt Newman](http://mdjnewman.me/)</small>
+
+                    Note:
+                    1. What is FP
+                    2. SOLID applied to FP
+                    3. My favourite FP language
+                    4. Some common patterns usable in all languages
                     </script>
                 </section>
 
